"small device responsive slove"

--- a/css/All-responsive.css
+++ b/css/All-responsive.css
@@ -924,6 +924,9 @@
 
 /*******************************todo  small mobile device ************** */
 @media screen and (max-width: 375px) {
+	.container{
+		width: 90%;
+	}
 	.sliderContent {
 		width: 100%;
 		text-align: center;
